// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform method throws when wired method is combined with @api 1`] = `
Object {
  "column": 0,
  "length": 49,
  "line": 5,
  "start": 105,
}
`;

exports[`Transform property decorator expects an imported identifier as first parameter 1`] = `
Object {
  "column": 6,
  "length": 2,
  "line": 4,
  "start": 85,
}
`;

exports[`Transform property decorator expects an object as second parameter 1`] = `
Object {
  "column": 14,
  "length": 7,
  "line": 4,
  "start": 109,
}
`;

exports[`Transform property decorator expects wire adapter as first parameter 1`] = `
Object {
  "column": 0,
  "length": 7,
  "line": 3,
  "start": 56,
}
`;

exports[`Transform property decorator expects wire adapter to be imported 1`] = `
Object {
  "column": 6,
  "length": 7,
  "line": 3,
  "start": 114,
}
`;

exports[`Transform property throws when using 2 wired decorators 1`] = `
Object {
  "column": 0,
  "length": 58,
  "line": 4,
  "start": 95,
}
`;

exports[`Transform property throws when wired property is combined with @api 1`] = `
Object {
  "column": 0,
  "length": 58,
  "line": 5,
  "start": 105,
}
`;

exports[`Transform property throws when wired property is combined with @track 1`] = `
Object {
  "column": 0,
  "length": 58,
  "line": 5,
  "start": 109,
}
`;
